Scheduler added, postRepository DTO added